examples/invalid_scl/invalid_wildcard_1.scl
rel select(cond ? _ : _) = R(cond)
